# CookAI

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5bb4a483705c_add_processing_jobs_table.py  a1b2c3d4e5f6_add_recipes_ingredients_steps_tables.py  b2c3d4e5f6a7_add_substitution_engine_tables.py  c3d4e5f6a7b8_add_caption_source_to_recipes.py
backend/app/: main.py
backend/app/api/: jobs.py  preferences.py  recipes.py  substitutions.py
backend/app/core/: config.py  database.py  deps.py
backend/app/models/: __init__.py  job.py  recipe.py  substitution.py  user_profile.py
backend/app/schemas/: __init__.py  job.py  recipe.py  substitution.py
backend/app/services/: caption_extractor.py  cleanup.py  media_extractor.py  preference_matcher.py  recipe_synthesizer.py  substitution_engine.py  substitution_kb.py  transcription.py  url_validator.py  video_downloader.py  visual_analyzer.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: seed_substitutions.py
backend/tests/: conftest.py
backend/tests/api/: test_jobs.py  test_preferences.py  test_recipes.py  test_substitutions.py
backend/tests/services/: test_caption_extractor.py  test_cleanup.py  test_media_extractor.py  test_preference_matcher.py  test_recipe_synthesizer.py  test_substitution_engine.py  test_substitution_kb.py  test_transcription.py  test_url_validator.py  test_video_downloader.py  test_visual_analyzer.py
backend/tests/workers/: test_tasks.py
(+10 files in other folders)
